# anchor-escrow-2025

./: Anchor.toml  CLAUDE.md  README.md  WORK-SUMMARY.md  demo-ticketfair-workflow.sh  package-lock.json  package.json  presentation.md
docs/: plan-ticketfair-with-switchboard-vrf.md
examples/: README.md  place-bid-example.ts
phase1/: PHASE1-COMPLETION-SUMMARY.md  PHASE1-PLAN.md  PHASE1-TODO-ANALYSIS.md  PHASE1-TODOs.md  PHASE1.md  TYPESCRIPT-TEST-UPDATE-PLAN.md
phase2/: PHASE2.md
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
programs/escrow/src/handlers/: ticketfair_bid.rs  ticketfair_event.rs  ticketfair_ticket.rs  ticketfair_user.rs
programs/escrow/src/state/: bid.rs  event.rs  mod.rs  ticket.rs  user.rs
programs/escrow/tests/: ticketfair_auction.rs
src/: ticketfair-api.ts
tests/: ticketfair.test-helpers.ts  ticketfair.test.ts
