[package]
name = "escrow"
version = "1.0.0"
description = "A working minimal Anchor Escrow app"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]

anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Add Metaplex Bubblegum v2 for cNFT CPI integration (review version/compatibility with advisors)
mpl-bubblegum = "1.0.0"
solana-program = "2.2.1"
spl-token-2022 = "9.0.0"

[[test]]
name = "ticketfair_auction"
path = "tests/ticketfair_auction.rs"

