[package]
name = "escrow"
version = "1.0.0"
description = "A working minimal Anchor Escrow app"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]

anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Temporarily commented out to resolve dependency conflicts
# curve25519-dalek = "4.1.3"
# mpl-bubblegum = "2.0.1"


[[test]]
name = "ticketfair_auction"
path = "tests/ticketfair_auction.rs"

